descrição da alteração

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="hero-visual">
                 <div class="book-wrapper">
                     <div class="book-3d">
-                        <img src="images/cover.png" alt="Healthy Cookbook" class="items-cover">
+                        <img src="images/cover.webp" alt="Healthy Cookbook" class="items-cover">
                     </div>
                 </div>
             </div>
@@ -121,7 +121,7 @@
                 </div>
                 <div class="gallery-grid">
                     <div class="food-card fade-in">
-                        <img src="images/pancakes.png" alt="Fluffy Gluten Free Pancakes">
+                        <img src="images/pancakes.webp" alt="Fluffy Gluten Free Pancakes">
                         <div class="food-info">
                             <span class="tag">Breakfast</span>
                             <h3>Fluffy Gluten-Free Pancakes</h3>
