descrição da alteração

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     </div>
 
                     <div class="food-card fade-in">
-                        <img src="images/salad.png" alt="Quinoa Power Bowl">
+                        <img src="images/salad.webp" alt="Quinoa Power Bowl">
                         <div class="food-info">
                             <span class="tag">Lunch</span>
                             <h3>Simple Quinoa Bowl</h3>
@@ -141,7 +141,7 @@
                     </div>
 
                     <div class="food-card fade-in">
-                        <img src="images/dessert.png" alt="Chocolate Mousse">
+                        <img src="images/dessert.webp" alt="Chocolate Mousse">
                         <div class="food-info">
                             <span class="tag">Dessert</span>
                             <h3>Chocolate Dessert Without Added Sugar</h3>
@@ -222,7 +222,7 @@
             <div class="container">
                 <div class="author-content fade-in">
                     <div class="author-image">
-                        <img src="images/author.jpg" alt="Giorgia Summer">
+                        <img src="images/author.webp" alt="Giorgia Summer">
                     </div>
                     <div class="author-bio">
                         <span class="tag">Meet the Creator</span>
@@ -242,7 +242,7 @@
         <section class="guarantee-section">
             <div class="container">
                 <div class="guarantee-content fade-in">
-                    <img src="images/guarantee_seal.png" alt="100% Satisfaction Guarantee" class="guarantee-seal">
+                    <img src="images/guarantee_seal.webp" alt="100% Satisfaction Guarantee" class="guarantee-seal">
                     <div class="guarantee-text">
                         <h3>30-Day Money-Back Guarantee</h3>
                         <p>Try the cookbook risk-free. If for any reason you’re not satisfied,
